SMELL vari + cambiato metodo LOC